[tool.poetry]
name = "bike-wearing"
version = "0.1.0"
description = ""
authors = ["François Weber <frweber@soprema.fr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.7"
typer = "^0.9.0"
questionary = "^2.0.1"
black = "^23.12.1"
requests = "^2.31.0"
loguru = "^0.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
